// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`left-nav can mount "not ready" LeftNav 1`] = `
<nav role="navigation" aria-label="Menu Sharp" class="SharpLeftNav SharpLeftNav--expanded SharpLeftNav--collapseable">
	<div class="SharpLeftNav__top-icon">
		<i class="fa"></i>
	</div>
	<div class="SharpLeftNav__title-container">
		<h2 class="SharpLeftNav__title"></h2>
	</div>
	<div class="d-flex align-items-center justify-content-center h-100">
		<div class="SharpLoading SharpLoading--small">
			<svg viewBox="-75 -75 150 150" class="SharpLoading__svg">
				<circle cx="0" cy="0" r="37.5"></circle>
			</svg>
		</div>
	</div>
</nav>
`;

exports[`left-nav can mount "with current icon" LeftNav 1`] = `
<nav role="navigation" aria-label="Menu Sharp" class="SharpLeftNav SharpLeftNav--expanded SharpLeftNav--collapseable">
	<div class="SharpLeftNav__top-icon">
		<i class="fa CURRENT_ICON"></i>
	</div>
	<div class="SharpLeftNav__title-container">
		<h2 class="SharpLeftNav__title"></h2>
	</div>
	<div class="SharpLeftNav__content d-flex flex-column h-100">
		<div class="SharpLeftNav__inner flex-grow-1" style="min-height: 0;">
			<div class="SharpGlobalFilters"></div>
			<div>NAV CONTENT</div>
		</div>
		<div class="flex-grow-0">
			<div class="SharpLeftNav__collapse">
				<a href="#" class="SharpLeftNav__collapse-link">
					<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd" class="SharpLeftNav__collapse-arrow">
						<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
					</svg>
				</a>
			</div>
		</div>
	</div>
</nav>
`;

exports[`left-nav can mount "with state" LeftNav 1`] = `
<nav role="navigation" aria-label="Menu Sharp" class="SharpLeftNav SharpLeftNav--STATE SharpLeftNav--collapseable">
	<div class="SharpLeftNav__top-icon">
		<i class="fa"></i>
	</div>
	<div class="SharpLeftNav__title-container">
		<h2 class="SharpLeftNav__title"></h2>
	</div>
	<div class="SharpLeftNav__content d-flex flex-column h-100">
		<div class="SharpLeftNav__inner flex-grow-1" style="min-height: 0;">
			<div class="SharpGlobalFilters"></div>
			<div>NAV CONTENT</div>
		</div>
		<div class="flex-grow-0">
			<div class="SharpLeftNav__collapse">
				<a href="#" class="SharpLeftNav__collapse-link">
					<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd" class="SharpLeftNav__collapse-arrow">
						<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
					</svg>
				</a>
			</div>
		</div>
	</div>
</nav>
`;

exports[`left-nav can mount LeftNav 1`] = `
<nav role="navigation" aria-label="Menu Sharp" class="SharpLeftNav SharpLeftNav--expanded SharpLeftNav--collapseable">
	<div class="SharpLeftNav__top-icon">
		<i class="fa"></i>
	</div>
	<div class="SharpLeftNav__title-container">
		<h2 class="SharpLeftNav__title"></h2>
	</div>
	<div class="SharpLeftNav__content d-flex flex-column h-100">
		<div class="SharpLeftNav__inner flex-grow-1" style="min-height: 0;">
			<div class="SharpGlobalFilters"></div>
			<div>NAV CONTENT</div>
		</div>
		<div class="flex-grow-0">
			<div class="SharpLeftNav__collapse">
				<a href="#" class="SharpLeftNav__collapse-link">
					<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd" class="SharpLeftNav__collapse-arrow">
						<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
					</svg>
				</a>
			</div>
		</div>
	</div>
</nav>
`;
